--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
               <iframe 
                 width="560" 
                 height="315" 
-                src="https://www.youtube.com/embed/videoseries?si=vnXNTSnhZ3_2BNll&amp;list=https://www.youtube.com/embed/videoseries?amp;list=PLhB2bHrWAh_WwV80XSU1bbz9D3pzjwz6R" 
-                title="Ryuzan Mix Salon 実績サンプル音源集" 
+                src="https://www.youtube.com/embed/videoseries?si=MUsh1jPq4xVd7HmP&amp;list=PLhB2bHrWAh_WwV80XSU1bbz9D3pzjwz6R" 
+                title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 referrerpolicy="strict-origin-when-cross-origin" 
@@ -322,7 +322,7 @@
         <p>
           やさしさで"声"を整える、歌声トリートメント専門のMIX師です。<br>
           「録音ミスがある」「リズムやピッチに自信がない」そんな不安も、まるごと大丈夫。<br>
-          自然体のあなたの歌を、きっと支えるように仕上げます😊<br><br>
+          自然体のあなたの歌を、そっと支えるように仕上げます😊<br><br>
           <strong>専門技術:</strong> Cubase Pro, Melodyne, iZotope RX, Neutron, Ozone<br>
           <strong>対応ジャンル:</strong> ボカロ、J-POP、アニソン、洋楽カバー
         </p>
@@ -373,7 +373,7 @@
           <i class="fas fa-music" style="color: #3498db;"></i>
           豊富な実績とサンプル
         </h3>
-        <p>サンプルをプレイリストで公開。仕上がりを耳で確認できるから安心。様々なジャンル・声質に対応した実績をご覧いただけます。</p>
+        <p>サンプルをプレイリストで公開、仕上がりを耳で確認できるから安心。様々なジャンル・声質に対応した実績をご覧いただけます。</p>
       </article>
 
       <article class="card">
@@ -405,25 +405,25 @@
       <article class="card">
         <h3>「終始丁寧な対応で安心」</h3>
         <p>データ確認させていただき、問題ありませんでした。終始丁寧に対応していただき、本当にありがとうございました。またお願いしたいと思いますので、よろしくお願いいたします。</p>
-        <small style="color: var(--text-muted); font-style: italic;">- 配信者さま</small>
+        <small style="color: var(--text-muted); font-style: italic;">- 配信者様</small>
       </article>
 
       <article class="card">
         <h3>「パーフェクトです！」</h3>
         <p>対応やクオリティ全てにおいて完璧でした！初めてのMIX依頼で不安でしたが、丁寧な説明と素早い対応で安心してお任せできました。</p>
-        <small style="color: var(--text-muted); font-style: italic;">- 初心者Vtuberさま</small>
+        <small style="color: var(--text-muted); font-style: italic;">- 初心者Vtuber様</small>
       </article>
 
       <article class="card">
         <h3>「希望通りの仕上がり」</h3>
         <p>何度も丁寧に修正していただき、安心して依頼できました！細かい要望も快く聞いてくださり、想像以上の仕上がりに感動しています。</p>
-        <small style="color: var(--text-muted); font-style: italic;">- 歌い手活動2年目さま</small>
+        <small style="color: var(--text-muted); font-style: italic;">- 歌い手活動2年目様</small>
       </article>
 
       <article class="card">
         <h3>「MIX初心者でも安心」</h3>
         <p>録音や動画のことも教えていただき、初めてでも迷わず依頼できました。専門知識がなくても分かりやすく説明してくださいます。</p>
-        <small style="color: var(--text-muted); font-style: italic;">- 新人Vtuberさま</small>
+        <small style="color: var(--text-muted); font-style: italic;">- 新人Vtuber様</small>
       </article>
     </div>
   </section>
@@ -488,7 +488,7 @@
             </div>
 
             <div class="price-item">
-              <div class="price-name">💥 コラボ追加（1名）</div>
+              <div class="price-name">👥 コラボ追加（1名）</div>
               <div class="price-description">デュエット・ユニゾンなど追加ボーカル1名まで対応</div>
               <div class="price-amount">+¥2,000</div>
               <div class="price-note">2名以上は別途お見積もり</div>
@@ -509,7 +509,7 @@
             </div>
 
             <div class="price-item" style="opacity: 0.5; background: #f5f5f5;">
-              <div class="price-name" style="color: var(--text-muted);">📑 ガイド譜 PDF</div>
+              <div class="price-name" style="color: var(--text-muted);">📒 ガイド譜 PDF</div>
               <div class="price-description" style="color: var(--text-muted);">視覚的にわかりやすいメロディ譜をPDFで提供</div>
               <div class="price-amount" style="color: var(--text-muted);">準備中</div>
               <div class="price-note" style="color: var(--text-muted);">近日提供予定</div>
@@ -605,7 +605,7 @@
         <strong>💡 ココナラ・SKIMA経由の料金について</strong><br>
         サービス手数料が加算されるため、表示価格が異なります。X（DM）や簡単依頼フォームからのご依頼では、上記の通常価格でご案内しています。<br><br>
         <strong>🎁 お支払い方法について</strong><br>
-        <strong style="color: var(--success);">銀行振込を最も推奨</strong>しております（手数料はご負担ください）。次にPayPay決済、Amazonギフトカードの順となります。<br>
+        <strong style="color: var(--success);">銀行振込を最も推奨</strong>しており（手数料はご負担ください）、次にPayPay決済、Amazonギフトカードの順となります。<br>
         その他の決済方法をご希望の場合は、お気軽にご相談ください。
       </div>
     </div>
@@ -863,7 +863,7 @@
         <strong>第2優先：PayPay</strong>（QRコード決済で簡単・手数料なし）<br>
         <strong>第3優先：Amazonギフトカード</strong>（上記が使えない場合）<br>
         <strong>その他：</strong>上記以外をご希望の場合はご相談ください<br><br>
-        銀行振込が最も確実で推奨しておりますが、PayPayも手軽でおすすめです。</p>
+        銀行振込が最も確実で推奨していますが、PayPayも手軽でおすすめです。</p>
       </details>
     </div>
 
