--- a/index.html
+++ b/index.html
@@ -137,6 +137,25 @@
             </p>
           </div>
 
+          <!-- YouTube完全版プレイリストへの誘導 -->
+          <div style="background: white; padding: 25px; border-radius: 16px; border: 2px solid var(--primary-light); box-shadow: var(--shadow); text-align: center; margin-bottom: 30px;">
+            <h4 style="color: var(--primary-dark); margin-bottom: 15px; font-size: 1.2rem;">
+              <i class="fab fa-youtube" style="color: #ff0000;"></i>
+              YouTube完全版プレイリスト
+            </h4>
+            <p style="color: var(--text-light); font-size: 1rem; margin-bottom: 20px; line-height: 1.6;">
+              より多くのサンプル音源を<br>YouTubeで直接確認
+            </p>
+            <a href="https://www.youtube.com/embed/videoseries?amp;list=PLhB2bHrWAh_WwV80XSU1bbz9D3pzjwz6R" 
+               target="_blank" rel="noopener"
+               style="background: #ff0000; color: white; padding: 14px 28px; border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 1rem; display: inline-flex; align-items: center; gap: 8px; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(255, 0, 0, 0.3);"
+               onmouseover="this.style.background='#cc0000'; this.style.transform='translateY(-2px)'"
+               onmouseout="this.style.background='#ff0000'; this.style.transform='translateY(0)'">
+              <i class="fab fa-youtube"></i>
+              プレイリストを開く
+            </a>
+          </div>
+
           <!-- メインプレイリスト表示エリア -->
           <div style="background: linear-gradient(135deg, #ffffff 0%, var(--primary-pale) 100%); border: 3px solid var(--primary); border-radius: 20px; padding: 30px; margin-bottom: 30px; box-shadow: 0 8px 30px rgba(178, 143, 221, 0.25); position: relative; overflow: hidden;">
             
@@ -150,7 +169,7 @@
               <iframe 
                 width="560" 
                 height="315" 
-                src="https://www.youtube.com/embed/videoseries?si=MUsh1jPq4xVd7HmP&amp;list=PLhB2bHrWAh_WwV80XSU1bbz9D3pzjwz6R&si=-WaJOZoka-xGYRO2" 
+                src="https://www.youtube.com/embed/videoseries?si=MUsh1jPq4xVd7HmP&amp;list=PLhB2bHrWAh_WwV80XSU1bbz9D3pzjwz6R" 
                 title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -210,46 +229,6 @@
                  onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 20px rgba(178, 143, 221, 0.4)'">
                 <i class="fas fa-comments"></i>
                 まずは相談する
-              </a>
-            </div>
-          </div>
-
-          <!-- 追加のプレイリストリンクとソーシャルプルーフ -->
-          <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-bottom: 30px;">
-            
-            <div style="background: white; padding: 25px; border-radius: 16px; border: 2px solid var(--primary-light); box-shadow: var(--shadow); text-align: center;">
-              <h4 style="color: var(--primary-dark); margin-bottom: 15px; font-size: 1.1rem;">
-                <i class="fab fa-youtube" style="color: #ff0000;"></i>
-                YouTube完全版プレイリスト
-              </h4>
-              <p style="color: var(--text-light); font-size: 0.9rem; margin-bottom: 20px; line-height: 1.6;">
-                より多くのサンプル音源を<br>YouTubeで直接確認
-              </p>
-              <a href="https://www.youtube.com/embed/videoseries?amp;list=PLhB2bHrWAh_WwV80XSU1bbz9D3pzjwz6R&si=-WaJOZoka-xGYRO2" 
-                 target="_blank" rel="noopener"
-                 style="background: #ff0000; color: white; padding: 12px 20px; border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 0.95rem; display: inline-flex; align-items: center; gap: 8px; transition: all 0.3s ease;"
-                 onmouseover="this.style.background='#cc0000'"
-                 onmouseout="this.style.background='#ff0000'">
-                <i class="fab fa-youtube"></i>
-                プレイリストを開く
-              </a>
-            </div>
-
-            <div style="background: white; padding: 25px; border-radius: 16px; border: 2px solid var(--accent-light); box-shadow: var(--shadow); text-align: center;">
-              <h4 style="color: var(--accent); margin-bottom: 15px; font-size: 1.1rem;">
-                <i class="fab fa-twitter" style="color: #1da1f2;"></i>
-                追加サンプル音源
-              </h4>
-              <p style="color: var(--text-light); font-size: 0.9rem; margin-bottom: 20px; line-height: 1.6;">
-                最新の制作実績を<br>Xで随時更新中
-              </p>
-              <a href="https://x.com/ryuzanmix/status/1940267868761071883" 
-                 target="_blank" rel="noopener"
-                 style="background: #1da1f2; color: white; padding: 12px 20px; border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 0.95rem; display: inline-flex; align-items: center; gap: 8px; transition: all 0.3s ease;"
-                 onmouseover="this.style.background='#0d8bd9'"
-                 onmouseout="this.style.background='#1da1f2'">
-                <i class="fab fa-twitter"></i>
-                固定ツイートを見る
               </a>
             </div>
           </div>
