--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <p style="color: var(--text-light); font-size: 1rem; margin-bottom: 20px; line-height: 1.6;">
               より多くのサンプル音源を<br>YouTubeで直接確認
             </p>
-            <a href="https://www.youtube.com/embed/videoseries?amp;list=PLhB2bHrWAh_WwV80XSU1bbz9D3pzjwz6R" 
+            <a href="https://youtube.com/playlist?list=PLhB2bHrWAh_WwV80XSU1bbz9D3pzjwz6R&si=KExYFzz2SylTtVsv" 
                target="_blank" rel="noopener"
                style="background: #ff0000; color: white; padding: 14px 28px; border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 1rem; display: inline-flex; align-items: center; gap: 8px; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(255, 0, 0, 0.3);"
                onmouseover="this.style.background='#cc0000'; this.style.transform='translateY(-2px)'"
